# MusescoreDownloader

./: .gitignore  main.py  manifest.json  musescore_download.js
html/: background.html
scripts/: background.js  content.js  icon_handler.js
src/companion-app/: Cargo.toml  build.rs  config.json
src/companion-app/src/: main.rs
src/companion-app/src/msd_config/: mod.rs
src/companion-app/src/tests/: mod.rs
src/extension/: manifest.json
src/extension/scripts/: background.js  content.js  filesaver.min.js
