[package]
name = "msd-companion"
version = "0.1.0"
edition = "2021"
include = ["shawl.exe"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
printpdf = {version="0.7.0", features = ["embedded_images"]}
regex = "1.10.4"
resvg = "0.41.0"
serde = {version = "1.0.198", features=["derive"]}

[build-dependencies]
winres = "0.1.12"
copy_to_output = "2.2.0"
glob = "0.3"
